<resources>
    <string name="app_name">My audio player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_name">File name</string>
    <string name="now_playing">Now Playing</string>
    <string name="this_is_song_name">This is song Name</string>
    <string name="this_is_song_artist">This is song artist</string>
    <string name="textDurationPlayed">1:28</string>
    <string name="textDurationTotal">4:28</string>
    <string name="delete">Delete</string>
</resources>