<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layoutTopBtn"
        android:background="@drawable/gradient_bg"
        android:layout_alignParentTop="true" >
    
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/backBtn"
        android:src="@drawable/ic_baseline_chevron_left"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/now_playing"
        android:textColor="@color/colourAccent"
        android:gravity="center_horizontal"
        android:layout_toStartOf="@+id/menuBtn"
        android:layout_toEndOf="@id/backBtn"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/menuBtn"
        android:src="@drawable/ic_baseline_menu"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/card"
        android:layout_below="@+id/layoutTopBtn">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pisica"
            android:scaleType="centerCrop"
            android:id="@+id/coverArt"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageView"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_song_name"
        android:id="@+id/songName"
        android:layout_below="@+id/card"
        android:textColor="@color/colourAccent"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_song_artist"
        android:id="@+id/songArtist"
        android:layout_below="@+id/songName"
        android:textColor="@color/colourAccent"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/relativeLayoutForBottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/idShuffle"
            android:src="@drawable/ic_baseline_shuffle_off"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/skipPrevious"
            android:src="@drawable/ic_baseline_skip_previous"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/playPause"
            android:layout_marginEnd="18dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/skipNext"
            android:src="@drawable/ic_baseline_skip_next"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/playPause"
            android:layout_marginStart="18dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/repeat"
            android:src="@drawable/ic_baseline_repeat_off"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playPause"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/relativeLayoutForBottom"
        android:id="@+id/seekBarLayout"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDurationPlayed"
            android:id="@+id/durationPlayed"
            android:textColor="@color/colourAccent"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDurationTotal"
            android:id="@+id/durationTotal"
            android:textColor="@color/colourAccent"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>


</RelativeLayout>